Little style fix on the editor box
Remove the overflowing content on the bottom of the page.

--- a/client/src/assets/scss/inputs.scss
+++ b/client/src/assets/scss/inputs.scss
@@ -7,9 +7,9 @@ input, select {
   border-radius: 6px;
   transition: 0.1s ease-in-out;
 
-  outline: none;
-  outline-color: transparent;
-  outline-style: none;
+  //outline: none;
+  //outline-color: transparent;
+  //outline-style: none;
   -webkit-appearance: none;
 
   background-color: $white-bis;
